Closed Bug 1474443 Opened 6 years ago Closed 6 years ago

Intermittent LeakSanitizer | leak at mozilla::AudioInfo::AudioInfo, MP4AudioInfo, MakeUnique, mozilla::MP4Metadata::GetTrackInfo

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox-esr60 --- wontfix
firefox63 --- wontfix
firefox64 --- fixed
firefox65 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jya)

References

Details

(Keywords: intermittent-failure, memory-leak, regression)

Attachments

(1 file)

Filed by: archaeopteryx [at] coole-files.de

https://treeherder.mozilla.org/logviewer.html#?job_id=186799933&repo=mozilla-central

https://queue.taskcluster.net/v1/task/Nvtg0JHeS9uDKhlDdMajow/runs/0/artifacts/public/logs/live_backing.log

[task 2018-07-06T10:38:28.862Z]     INFO - TEST-OK | dom/media/test/test_resolution_change.html | took 6896ms
[task 2018-07-06T10:38:28.918Z]     INFO - TEST-START | dom/media/test/test_video_dimensions.html
[task 2018-07-06T10:38:30.254Z]     INFO - GECKO(1671) | MEMORY STAT | vsize 20973856MB | residentFast 1021MB
[task 2018-07-06T10:38:30.270Z]     INFO - TEST-OK | dom/media/test/test_video_dimensions.html | took 1350ms
[task 2018-07-06T10:38:30.333Z]     INFO - TEST-START | Shutdown
[task 2018-07-06T10:38:30.334Z]     INFO - Passed:  8121
[task 2018-07-06T10:38:30.334Z]     INFO - Failed:  0
[task 2018-07-06T10:38:30.334Z]     INFO - Todo:    46
[task 2018-07-06T10:38:30.334Z]     INFO - Mode:    e10s
[task 2018-07-06T10:38:30.335Z]     INFO - Slowest: 111367ms - /tests/dom/media/test/test_playback.html
[task 2018-07-06T10:38:30.344Z]     INFO - SimpleTest FINISHED
[task 2018-07-06T10:38:30.346Z]     INFO - TEST-INFO | Ran 1 Loops
[task 2018-07-06T10:38:30.354Z]     INFO - SimpleTest FINISHED
[task 2018-07-06T10:38:30.860Z]     INFO - GECKO(1671) | ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2018-07-06T10:38:31.285Z]     INFO - GECKO(1671) | 1530873511278	Marionette	DEBUG	Received observer notification xpcom-will-shutdown
[task 2018-07-06T10:38:31.287Z]     INFO - GECKO(1671) | 1530873511278	Marionette	INFO	Stopped listening on port 2828
[task 2018-07-06T10:38:31.287Z]     INFO - GECKO(1671) | 1530873511279	Marionette	DEBUG	Remote service is inactive
[task 2018-07-06T10:38:31.792Z]     INFO - GECKO(1671) | -----------------------------------------------------
[task 2018-07-06T10:38:31.794Z]     INFO - GECKO(1671) | Suppressions used:
[task 2018-07-06T10:38:31.795Z]     INFO - GECKO(1671) |   count      bytes template
[task 2018-07-06T10:38:31.796Z]     INFO - GECKO(1671) |     637      20320 nsComponentManagerImpl
[task 2018-07-06T10:38:31.797Z]     INFO - GECKO(1671) |       3        624 mozJSComponentLoader::LoadModule
[task 2018-07-06T10:38:31.798Z]     INFO - GECKO(1671) |       2        288 libfontconfig.so
[task 2018-07-06T10:38:31.799Z]     INFO - GECKO(1671) | -----------------------------------------------------
[task 2018-07-06T10:38:34.297Z]     INFO - GECKO(1671) | =================================================================
[task 2018-07-06T10:38:34.297Z]    ERROR - GECKO(1671) | ==1736==ERROR: LeakSanitizer: detected memory leaks
[task 2018-07-06T10:38:34.299Z]     INFO - GECKO(1671) | Indirect leak of 8192 byte(s) in 1 object(s) allocated from:
[task 2018-07-06T10:38:34.299Z]     INFO - GECKO(1671) |     #0 0x4c1833 in malloc /builds/worker/workspace/moz-toolchain/src/llvm/projects/compiler-rt/lib/asan/asan_malloc_linux.cc:88:3
[task 2018-07-06T10:38:34.301Z]     INFO - GECKO(1671) |     #1 0x4f2b3d in moz_xmalloc /builds/worker/workspace/build/src/memory/mozalloc/mozalloc.cpp:70:17
[task 2018-07-06T10:38:34.302Z]     INFO - GECKO(1671) |     #2 0x7f3cbbf0a266 in operator new[] /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/mozalloc.h:168:12
[task 2018-07-06T10:38:34.306Z]     INFO - GECKO(1671) |     #3 0x7f3cbbf0a266 in MakeUnique<char []> /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/UniquePtr.h:688
[task 2018-07-06T10:38:34.308Z]     INFO - GECKO(1671) |     #4 0x7f3cbbf0a266 in mozilla::MediaResourceIndex::MediaResourceIndex(mozilla::MediaResource*) /builds/worker/workspace/build/src/dom/media/MediaResource.cpp:56
[task 2018-07-06T10:38:34.308Z]     INFO - GECKO(1671) |     #5 0x7f3cbc710472 in mozilla::ResourceStream::ResourceStream(mozilla::MediaResource*) /builds/worker/workspace/build/src/dom/media/mp4/ResourceStream.cpp:12:5
[task 2018-07-06T10:38:34.309Z]     INFO - GECKO(1671) |     #6 0x7f3cbc6ce722 in mozilla::MP4TrackDemuxer::MP4TrackDemuxer(mozilla::MP4Demuxer*, mozilla::UniquePtr<mozilla::TrackInfo, mozilla::DefaultDelete<mozilla::TrackInfo> >&&, mozilla::IndiceWrapper const&) /builds/worker/workspace/build/src/dom/media/mp4/MP4Demuxer.cpp:371:17
[task 2018-07-06T10:38:34.310Z]     INFO - GECKO(1671) |     #7 0x7f3cbc6c9543 in mozilla::MP4Demuxer::Init() /builds/worker/workspace/build/src/dom/media/mp4/MP4Demuxer.cpp:239:13
[task 2018-07-06T10:38:34.312Z]     INFO - GECKO(1671) |     #8 0x7f3cbbf4ab41 in mozilla::detail::ProxyFunctionRunnable<mozilla::MediaFormatReader::DemuxerProxy::Init()::$_10, mozilla::MozPromise<mozilla::MediaResult, mozilla::MediaResult, true> >::Run() /builds/worker/workspace/build/src/dom/media/MediaFormatReader.cpp:1230:47
[task 2018-07-06T10:38:34.312Z]     INFO - GECKO(1671) |     #9 0x7f3cb59340fd in mozilla::TaskQueue::Runner::Run() /builds/worker/workspace/build/src/xpcom/threads/TaskQueue.cpp:235:12
[task 2018-07-06T10:38:34.313Z]     INFO - GECKO(1671) |     #10 0x7f3cb5959406 in nsThreadPool::Run() /builds/worker/workspace/build/src/xpcom/threads/nsThreadPool.cpp:231:14
[task 2018-07-06T10:38:34.315Z]     INFO - GECKO(1671) |     #11 0x7f3cb5959e1c in non-virtual thunk to nsThreadPool::Run() /builds/worker/workspace/build/src/xpcom/threads/nsThreadPool.cpp
[task 2018-07-06T10:38:34.318Z]     INFO - GECKO(1671) |     #12 0x7f3cb594ec09 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/workspace/build/src/xpcom/threads/nsThread.cpp:1051:14
[task 2018-07-06T10:38:34.323Z]     INFO - GECKO(1671) |     #13 0x7f3cb59559e8 in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/workspace/build/src/xpcom/threads/nsThreadUtils.cpp:519:10
[task 2018-07-06T10:38:34.337Z]     INFO - GECKO(1671) |     #14 0x7f3cb685f5eb in mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) /builds/worker/workspace/build/src/ipc/glue/MessagePump.cpp:334:20
[task 2018-07-06T10:38:34.338Z]     INFO - GECKO(1671) |     #15 0x7f3cb67b325c in RunInternal /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:325:10
[task 2018-07-06T10:38:34.338Z]     INFO - GECKO(1671) |     #16 0x7f3cb67b325c in RunHandler /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:318
[task 2018-07-06T10:38:34.339Z]     INFO - GECKO(1671) |     #17 0x7f3cb67b325c in MessageLoop::Run() /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:298
[task 2018-07-06T10:38:34.340Z]     INFO - GECKO(1671) |     #18 0x7f3cb59492d9 in nsThread::ThreadFunc(void*) /builds/worker/workspace/build/src/xpcom/threads/nsThread.cpp:423:11
[task 2018-07-06T10:38:34.341Z]     INFO - GECKO(1671) |     #19 0x7f3cd2ed6dc8 in _pt_root /builds/worker/workspace/build/src/nsprpub/pr/src/pthreads/ptthread.c:201:5
[task 2018-07-06T10:38:34.342Z]     INFO - GECKO(1671) |     #20 0x7f3cd72156b9 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x76b9)
[task 2018-07-06T10:38:34.342Z]     INFO - GECKO(1671) | Indirect leak of 1128 byte(s) in 1 object(s) allocated from:

...

[task 2018-07-06T10:38:35.053Z]     INFO - GECKO(1671) | SUMMARY: AddressSanitizer: 11083 byte(s) leaked in 21 allocation(s).
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) | -----------------------------------------------------
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) | Suppressions used:
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |   count      bytes template
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |     643      20512 nsComponentManagerImpl
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |      42       8736 mozJSComponentLoader::LoadModule
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |     611      17509 libfontconfig.so
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |       4        176 _PR_Getfd
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) |       1         29 libglib-2.0.so
[task 2018-07-06T10:38:36.259Z]     INFO - GECKO(1671) | -----------------------------------------------------
[task 2018-07-06T10:38:36.478Z]     INFO - TEST-INFO | Main app process: exit 0
[task 2018-07-06T10:38:36.482Z]     INFO - TEST-INFO | LeakSanitizer | To show the addresses of leaked objects add report_objects=1 to LSAN_OPTIONS
[task 2018-07-06T10:38:36.483Z]     INFO - TEST-INFO | LeakSanitizer | This can be done in testing/mozbase/mozrunner/mozrunner/utils.py
[task 2018-07-06T10:38:36.484Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::AudioInfo::AudioInfo, MP4AudioInfo, MakeUnique, mozilla::MP4Metadata::GetTrackInfo
[task 2018-07-06T10:38:36.486Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at CreateInner, Create, nsAtomTable::Atomize, mozilla::BasePrincipal::FinishInit
[task 2018-07-06T10:38:36.488Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Malloc, nsTArray_base, SetCapacity, SetCapacity
[task 2018-07-06T10:38:36.489Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Malloc, nsTArray_base, AppendElements, mozilla::MP4AudioInfo::Update
[task 2018-07-06T10:38:36.490Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at CreateEventTargetWrapper, mozilla::SchedulerGroup::AbstractMainThreadForImpl, mozilla::dom::HTMLMediaElement::HTMLMediaElement, mozilla::dom::HTMLVideoElement::HTMLVideoElement
[task 2018-07-06T10:38:36.491Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::MP4TrackDemuxer::MP4TrackDemuxer, mozilla::MP4Demuxer::Init, mozilla::detail::ProxyFunctionRunnable, mozilla::TaskQueue::Runner::Run
[task 2018-07-06T10:38:36.492Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at MakeUnique, mozilla::MediaResourceIndex::MediaResourceIndex, mozilla::ResourceStream::ResourceStream, mozilla::MP4TrackDemuxer::MP4TrackDemuxer
[task 2018-07-06T10:38:36.492Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at MakeUnique, mozilla::MP4TrackDemuxer::MP4TrackDemuxer, mozilla::MP4Demuxer::Init, mozilla::detail::ProxyFunctionRunnable
[task 2018-07-06T10:38:36.493Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at PLDHashTable::Add, PLDHashTable::Add, PutEntry, mozilla::MediaCacheStream::BlockList::AddFirstBlock
[task 2018-07-06T10:38:36.494Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Malloc, nsTArray_base, AppendElement, mozilla::MediaCacheStream::InitAsCloneInternal
[task 2018-07-06T10:38:36.496Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Alloc, nsTSubstring, nsTSubstring, nsTSubstring
[task 2018-07-06T10:38:36.497Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at MakeUnique, mozilla::MP4Metadata::GetTrackInfo, mozilla::MP4Demuxer::Init, mozilla::detail::ProxyFunctionRunnable
[task 2018-07-06T10:38:36.498Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Malloc, nsTArray_base, AppendElement, AppendElement
[task 2018-07-06T10:38:36.499Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::SchedulerGroup::CreateEventTargetFor, mozilla::SchedulerGroup::CreateEventTargets, mozilla::dom::TabGroup::TabGroup, mozilla::dom::nsIContentChild::GetConstructedEventTarget
[task 2018-07-06T10:38:36.500Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::MP4Demuxer::Init, mozilla::detail::ProxyFunctionRunnable, mozilla::TaskQueue::Runner::Run, nsThreadPool::Run
[task 2018-07-06T10:38:36.501Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at mozilla::BasePrincipal::CreateCodebasePrincipal, mozilla::BasePrincipal::CreateCodebasePrincipal, nsScriptSecurityManager::GetChannelURIPrincipal, nsScriptSecurityManager::GetChannelResultPrincipal
[task 2018-07-06T10:38:36.502Z]    ERROR - TEST-UNEXPECTED-FAIL | LeakSanitizer | leak at Malloc, nsTArray_base, AppendElement, RegisterIterator
[task 2018-07-06T10:38:36.504Z]     INFO - runtests.py | Application ran for: 0:13:07.370355
Component: Audio/Video → Audio/Video: Playback
A UniquePtr not freed? this makes no sense...
See Also: → 1426834
Depends on: 1507093
Blocks: 1341454
Keywords: regression
See Also: → 1507266
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9c7f5d38a1f4
Remove cycle between MP4Demuxer and MP4TrackDemuxer. r=padenot
https://hg.mozilla.org/mozilla-central/rev/9c7f5d38a1f4
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment on attachment 9025323 [details]
Bug 1474443 - Remove cycle between MP4Demuxer and MP4TrackDemuxer. r?padenot!

[Beta/Release Uplift Approval Request]

Feature/Bug causing the regression: Bug 1341454

User impact if declined: Memory leaks

Is this code covered by automated tests?: Yes

Has the fix been verified in Nightly?: Yes

Needs manual test from QE?: No

If yes, steps to reproduce: 

List of other uplifts needed: None

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): Removing a cycle between two objects

String changes made/needed: None
Attachment #9025323 - Flags: approval-mozilla-beta?
Comment on attachment 9025323 [details]
Bug 1474443 - Remove cycle between MP4Demuxer and MP4TrackDemuxer. r?padenot!

[Triage Comment]
Removes a cycle causing a number of different reported leaks. Approved for 64.0b13.
Attachment #9025323 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: