Bug 1474443 - Remove cycle between MP4Demuxer and MP4TrackDemuxer. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D12004